welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value a
  a=Color.blue
  ^SlugTracking:8: error: not found: value a
  a=getCouleurSol()
  ^SlugTracking:10: error: not found: value a
  if (a==Color.green){
      ^