welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  a=Color.blue
  if (estFaceMur()==true){
    return false
  }
  avance()
  a=getCouleurSol()
  recule()
  if (a==Color.green){
    return true
  }else{
    return false
  }
}